# aoc-2025

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: benchmark.yml
benches/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/: day1.rs  lib.rs
