[package]
name = "aoc-2025"
publish = false
version = "0.0.0"
edition = "2024"
rust-version = "1.91.0"
authors = ["Marcel Witoschek <marcel.marciland@gmail.com>"]
repository = "https://github.com/Marciland/aoc-2025"

[dependencies]
reqwest = { version = "0.12", features = ["cookies", "blocking"] }

[dev-dependencies]
criterion = "0.7.0"

[lib]
bench = false

[[bench]]
name = "day1"
harness = false

[[bench]]
name = "day2"
harness = false

[[bench]]
name = "day3"
harness = false

[[bench]]
name = "day4"
harness = false

[[bench]]
name = "day5"
harness = false

[[bench]]
name = "day6"
harness = false

[[bench]]
name = "day7"
harness = false

[[bench]]
name = "day8"
harness = false

[[bench]]
name = "day9"
harness = false

[[bench]]
name = "day10"
harness = false

[[bench]]
name = "day11"
harness = false

[[bench]]
name = "day12"
harness = false

[lints.clippy]
correctness = "deny"
suspicious = "deny"
style = "deny"
complexity = "deny"
perf = "deny"
pedantic = "deny"
nursery = "deny"
cargo = "deny"

multiple_crate_versions = { level = "allow", priority = 1 }

[lints.rust]
unsafe_code = "forbid"
warnings = "deny"
